--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                           </div>
                           <div class="card-group">
                                 <div class="card">
-                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                  <img class="card-img-top" src="view/assets/img/comida1.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -58,7 +58,7 @@
                                   </div>
                                 </div>
                                 <div class="card">
-                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                  <img class="card-img-top" src="view/assets/img/comida2.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -68,7 +68,7 @@
                                   </div>
                                 </div>
                                 <div class="card">
-                                  <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                                  <img class="card-img-top" src="view/assets/img/comida2.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
