--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Firebase Login</title>
+    <title>Obtener lugares cercanos </title>
     <!-- <link rel="stylesheet" href="src/view/assets/css/styles.css"> -->
     <link rel="stylesheet" href="view/assets/css/bootstrap.min.css">
 
