--- a/src/prueba.html
+++ b/src/prueba.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyBHef2Y-ThENdEYr2y_Rv0KbI7-bB-k4LU&libraries=places"></script>
     <title>Document</title>
     <style>
             #map{
@@ -12,11 +12,12 @@
             }
             </style>
 </head>
-<body>
-        <div id="map"></div>
+<body onload="initMap()">
+    <h1>lugares cercanos</h1>
+    <div id="mapa" style="width: 450px; height: 350px;"> </div>
+    <input type="text" placeholder="ingrese que desea encontrar">
 </body>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBHef2Y-ThENdEYr2y_Rv0KbI7-bB-k4LU&callback=initMap"></script>
 
-<script src="model/localitation.js"></script>
+
 <script src="controller/main.js"></script>
 </html>
